# auto-desktop

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  RELEASING.md  VISION.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: SAFE_INTEGRATION.md
e2e/wdio/: README.md  package.json  wdio.conf.js
e2e/wdio/test/: shell.spec.js
scripts/: approval-shot.ts  approval-shots.ts  build-injected.ts  check-icons.ts  devtest.ts  feat-shots.ts  fetch-token-data.ts  findwin.swift  ledger-onboarding-test.ts  ledger-shots.ts  lock-test.ts  make-windows-icon.ts  mw-shots.ts  native-shot.sh  network-test.ts  onboarding-test.ts  redesign-shots.ts  send-shots.ts  settings-test.ts  shot.ts  smoke-ci.ts  ux-final-shots.ts
src/: App.css  App.tsx  ApprovalView.css  ApprovalView.tsx  MenuOverlayView.tsx  SafeQueue.css  SafeQueue.tsx  SidebarFooter.test.tsx  SidebarFooter.tsx  ToastOverlayView.tsx  components.css  main.tsx  theme.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  test-manifest.xml
src-tauri/capabilities/: approval.json  dapp.json  default.json  menu-overlay.json  toast-overlay.json
src-tauri/icons/: icon.icns
src-tauri/injected/: inpage.js
src-tauri/permissions/: approval.toml  dapp-browser.toml  dapp-dialog.toml  defi.toml  diagnostics.toml  node-rpc.toml  okx-dex.toml  open-external-url.toml  portfolio-history.toml  price-oracle.toml  safe.toml  vault.toml  wallet-request.toml  wallet-send.toml
src-tauri/src/: eip712.rs  eth_tx.rs  ledger.rs  lib.rs  main.rs  smoke.rs  vault.rs
src/injected/: inpage.tauri.ts
src/lib/: ChainIcon.tsx  LedgerPicker.tsx  accounts.ts  activeChain.ts  activity.ts  appPrefs.ts  chainSearch.test.ts  chainSearch.ts  chains.ts  dapps.ts  decode.test.ts  decode.ts  defi.ts  explorer.ts  format.test.ts  format.ts  i18n.ts  icons.tsx  keccak.test.ts  keccak.ts  menuOverlay.ts  okxDex.ts  platform.ts  portfolioHistory.ts  prices.test.ts  prices.ts  qr.tsx  rpc.ts  safes.ts  serialQueue.test.ts  serialQueue.ts  simulation.ts  theme.ts  toast.ts  tokenData.ts  tokens.ts  ui.tsx  updateBar.test.ts  updateBar.ts  updater.ts  (+2 more)
src/lib/swap/: relay-provider.ts  types.ts  xflows-provider.test.ts  xflows-provider.ts
src/pages/: BrowserView.css  BrowserView.tsx  DappsPage.css  DappsPage.tsx  LockScreen.css  LockScreen.tsx  SettingsPage.css  SettingsPage.tsx  SwapFeeBreakdown.test.tsx  SwapFeeBreakdown.tsx  WalletPage.css  WalletPage.tsx
src/wallet-core/: index.ts
src/wallet-core/adapters/: confirm.ts  hid.ts  index.ts  (+2 more)
tests/: defi.test.ts
(+7 files in other folders)
