[package]
name = "auto-desktop"
version = "0.2.12"
description = "AutoDesktop — a lightweight desktop wallet & dApp browser"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "auto_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` enables multi-webview (Window::add_child) — required for the embedded dApp browser.
# `macos-private-api` enables transparent WKWebView overlays for shell toasts above dApps.
tauri = { version = "2", features = ["unstable", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Wallet crypto (pure-Rust, no C toolchain needed)
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"

# Read-only JSON-RPC forwarding to chain nodes. rustls-tls avoids a system
# OpenSSL dependency (keeps the build self-contained / installer small).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# oneshot channels + timeout for the approval flow (already in the tree via reqwest/tauri).
tokio = { version = "1", features = ["sync", "time"] }
bip39 = { version = "2.2.2", features = ["rand"] }
argon2 = "0.5.3"
aes-gcm = "0.10.3"
base64 = "0.22.1"
zeroize = { version = "1.8.2", features = ["derive", "serde"] }
sha2 = "0.10"
hmac = "0.12"

# Ledger hardware wallet over USB-HID. WKWebView has no WebHID, so we talk to the
# device from Rust. Default features build the bundled C hidapi against IOKit on
# macOS — no system library needed; the C core is tiny (installer-size safe).
hidapi = "2"

[dev-dependencies]
# The `test` feature exposes tauri::test's in-process mock runtime. That is the
# only automatable E2E path on macOS: tauri-driver/WebdriverIO need a WKWebView
# WebDriver Apple doesn't provide, so we drive the real invoke→command→handler
# pipeline in-process instead. Feature only applies to test builds (resolver v2).
tauri = { version = "2", features = ["test"] }
